<resources>
    <string name="app_name">QQ滑动菜单</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="text_1" translatable="false">QQ钱包</string>
    <string name="text_2" translatable="false">个性装扮</string>
    <string name="text_3" translatable="false">我的收藏</string>
    <string name="text_4" translatable="false">我的相册</string>
    <string name="text_5" translatable="false">我的文件</string>
    <string name="text_6" translatable="false">我的日程</string>
    <string name="text_7" translatable="false">我的名片夹</string>


</resources>